# starlette-graphql

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
examples/federation/: account.py  gateway.js  helper.py  package-lock.json  package.json  product.py  review.py  user.py
examples/fileupload/: app.py  multi.sh  single.sh
examples/hello/: app.py  schema.gql
examples/subscribe/: app.py  server.py
stargql/: __init__.py  __version__.py  applications.py  pubsub.py  pubsub_async_iterator.py  redis_pubsub.py  subscribe.py  subscription.py
