[tool.poetry]
name = "starlette-graphql"
version = "0.0.3"
description = "Starlette graphql extension."
authors = ["syfun <sunyu418@gmail.com>"]
license = "MIT"

packages = [
    { include = "stargql" }
]

[tool.poetry.dependencies]
python = "^3.7"
python-gql = "*"
starlette = "^0.13.3"
typing_extensions = { version =  "^3.7.4", python = "< 3.8" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
