[tool.poetry]
name = "starlette-graphql"
version = "0.0.6"
description = "Starlette graphql extension."
authors = ["syfun <sunyu418@gmail.com>"]
license = "MIT"

packages = [
    { include = "stargql" }
]

[tool.poetry.dependencies]
python = "^3.7"
python-gql = "<0.1"
starlette = "^0.13.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
