[tool.poetry]
name = "starlette-graphql"
version = "0.1.4"
description = "The starlette GraphQL implement, which  support query, mutate and subscription."
authors = ["syfun <sunyu418@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/syfun/starlette-graphql"

packages = [
    { include = "stargql" }
]

[tool.poetry.dependencies]
python = ">3.7"
python-gql = ">=0.1"
starlette = ">0.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
